# whisper-scripts

./: Dockerfile  foo.sh
app/: pyproject.toml
